--- a/cs final proj/about.html
+++ b/cs final proj/about.html
@@ -1,28 +1,40 @@
-<!DOCYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>HYDROHAVEN</title>
-<link rel="stylesheet" href="style2.css" type="text/css">
+    <title>HYDROHAVEN</title>
+    <link rel="stylesheet" href="style2.css" type="text/css">
+</head>
 <body>
 
     <header>
         <h1>All About Clean Water and Sanitation</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html" id="home-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="solution.html" class="nav-link">Solution</a>
         </nav>
     </header>
 
     <main>
-        <h2>What is this About?</h2>
-        <p>Having clean water and sanitation is crucial for survival. Nowadays, frequent typhoons and floods often lead to water shortages, affecting many people. This situation poses serious health risks due to the spread of waterborne diseases and poor sanitation. Addressing water scarcity and improving sanitation is essential for the well-being and resilience of affected communities.
+	<audio controls autoplay>
+		<source src="watersound.ogg" type="audio/ogg">
+  		<source src="watersound.mp3" type="audio/mpeg">
+	</audio>
 
-Investing in sustainable water management and disaster preparedness can mitigate the impact of these natural disasters. This includes building resilient infrastructure and promoting efficient water use.</p>
+        <h2>What is this About?</h2>
+        <p>
+            Having clean water and sanitation is crucial for survival. Nowadays, frequent typhoons and floods often lead to water shortages, affecting many people. This situation poses serious health risks due to the spread of waterborne diseases and poor sanitation. Addressing water scarcity and improving sanitation is essential for the well-being and resilience of affected communities.
+        </p>
+        <p>
+            Investing in sustainable water management and disaster preparedness can mitigate the impact of these natural disasters. This includes building resilient infrastructure and promoting efficient water use.
+        </p>
+
+<img src="handwash.jpg" alt="HandWash" width="500" height="400">
+
     </main>
 
     <footer>
-        <p>&copy;</p>
+        <p>&copy; 2024 HydroHaven</p>
     </footer>
 
 </body>
