--- a/cs final proj/index.html
+++ b/cs final proj/index.html
@@ -1,37 +1,55 @@
-<!DOCYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>HYDROHAVEN</title>
-<link rel="stylesheet" href="style1.css" type="text/css">
+    <title>HYDROHAVEN</title>
+    <link rel="stylesheet" href="style1.css" type="text/css">
+</head>
 <body>
 
     <header>
-        <div class="HydroHaven">HydroHaven:Source of Purity</div>
-	<div class="sub1"</div>
-	<p>Clean and Safe Water for Everyone.</p>
-    <img id="image" src="logo.png">
-
-        </div>
+        <div class="HydroHaven">HydroHaven: Source of Purity</div>
+        <div class="sub1"></div>
+        <p>Clean and Safe Water for Everyone.</p>
+        <img src="logo.png" alt="HydroHavenLogo" width="250" height="250">
         <nav>
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
-            <a href="sources.html">Sources</a>
+            <a href="solution.html">Solution</a>
         </nav>
     </header>
+
+#home {
+  width: 46px;
+  height: 44px;
+  background: url(watersplash.jpg) 0 0;
+}
+
+#next {
+  width: 43px;
+  height: 44px;
+  background: url(watersplash.jpg) -91px 0;
+}
+
 
     <main>
         <h2>Clean Water and Sanitation</h2>
         <p>Road to a cleaner, clearer, and safer tomorrow.</p>
+
+	<audio controls autoplay>
+		<source src="horse.ogg" type="audio/ogg">
+  		<source src="watersound.mp3" type="audio/mpeg">
+	</audio>
+
     </main>
 
-	<article>
-	 <section>
-  		<h1>Clean Water and Sanitation</h1>
-  		<p>This website aims to spread awareness about how we need to have clean and safe water to use for everyday our life.</p>
-	</section>
-	</article>
-	
-	<iframe src="https://drive.google.com/file/d/1v2Hg7pql5fPZkqL8OkFOfWH0K-jR5VQP/preview" width="420" height="315"></iframe>	
+    <article>
+        <section>
+            <h1>Clean Water and Sanitation</h1>
+            <p>This website aims to spread awareness about how we need to have clean and safe water to use for everyday our life.</p>
+        </section>
+    </article>
+    
+    <iframe src="https://drive.google.com/file/d/1v2Hg7pql5fPZkqL8OkFOfWH0K-jR5VQP/preview" class="video" width="420" height="315"></iframe>    
 
     <footer>
         <p>&copy; </p>
