--- a/cs final proj/solution.html
+++ b/cs final proj/solution.html
@@ -1,29 +1,43 @@
-<!DOCYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>HYDROHAVEN</title>
-<link rel="stylesheet" href="style3.css" type="text/css">
+    <title>HYDROHAVEN</title>
+    <link rel="stylesheet" href="style3.css" type="text/css">
+</head>
 <body>
 
     <header>
         <h1>Clean Water and Sanitation</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html" id="home-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="solution.html" class="nav-link">Solution</a>
         </nav>
     </header>
 
     <main>
-        <h2>Solution</h2>
-        <p>Moving on, what can be the possible solutions to this issue? Well, starting in our own homes, we can make a significant change by not wasting water. When brushing our teeth or washing the dishes, let’s avoid letting the water run. We can also recycle rainwater; for example, rainwater can be used for watering plants.
 
-Communities can also take bigger steps to promote water conservation. Local governments can hold workshops to teach residents how to save water and why it's important. Additionally, investing in systems that capture and use rainwater can help reduce reliance on regular water supplies. By working together, we can create a culture of conservation that helps both our homes and the environment.</p>
+	<audio controls autoplay>
+		<source src="watersound.ogg" type="audio/ogg">
+  		<source src="watersound.mp3" type="audio/mpeg">
+	</audio>
+
+        <h2>Solution</h2>
+        <p>
+            Moving on, what can be the possible solutions to this issue? Well, starting in our own homes, we can make a significant change by not wasting water. When brushing our teeth or washing the dishes, let’s avoid letting the water run. We can also recycle rainwater; for example, rainwater can be used for watering plants.
+        </p>
+        <p>
+            Communities can also take bigger steps to promote water conservation. Local governments can hold workshops to teach residents how to save water and why it's important. Additionally, investing in systems that capture and use rainwater can help reduce reliance on regular water supplies. By working together, we can create a culture of conservation that helps both our homes and the environment.
+        </p>
+
+	<img src="waterwaves.png" alt="WaterWaves" width="500" height="333">
+
     </main>
 
     <footer>
-        <p>&copy; </p>
+        <p>&copy; 2024 HydroHaven</p>
     </footer>
 
 </body>
 </html>
+
