--- a/cs final proj/quiz.html
+++ b/cs final proj/quiz.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Quiz on SDG 6</title>
+    <title>Water Quiz</title>
     <link rel="stylesheet" href="newstyle.css">
-    <script defer src="quiz.js"></script>
+    <script src="quiz.js" defer></script>
 </head>
 <body>
+
+<header>
+    <a href="index.html">← Back to Home</a>
+</header>
 
 <div class="quiz-container">
     <div id="timer">Time Left: 60s</div>
     <div id="quiz">
         <div class="question" id="question"></div>
         <div id="answers"></div>
-        <button class="button nav-btn" id="prevBtn" disabled>Previous</button>
-        <button class="button nav-btn" id="nextBtn" disabled>Next</button>
-        <button class="button submit-btn" id="submitBtn">Submit</button>
+        <button class="button" id="prevBtn" disabled>Previous</button>
+        <button class="button" id="nextBtn" disabled>Next</button>
+        <button class="button" id="submitBtn" style="display: none;">Submit</button>
     </div>
     <div id="score"></div>
 </div>
