--- a/cs final proj/quiz.html
+++ b/cs final proj/quiz.html
@@ -13,16 +13,16 @@
     <a href="index.html">← Back to Home</a>
 </header>
 
-<div class="quiz-container">
-    <div id="timer">Time Left: 60s</div>
-    <div id="quiz">
-        <div class="question" id="question"></div>
-        <div id="answers"></div>
-        <button class="button" id="prevBtn" disabled>Previous</button>
-        <button class="button" id="nextBtn" disabled>Next</button>
-        <button class="button" id="submitBtn" style="display: none;">Submit</button>
+<div class="quiz-wrapper">
+    <div id="countdown">Time Left: 60s</div>
+    <div id="quiz-content">
+        <div class="query" id="query"></div>
+        <div id="choices"></div>
+        <button class="btn" id="backBtn" disabled>Previous</button>
+        <button class="btn" id="forwardBtn" disabled>Next</button>
+        <button class="btn" id="finishBtn" style="display: none;">Submit</button>
     </div>
-    <div id="score"></div>
+    <div id="finalScore"></div>
 </div>
 
 </body>
