--- a/cs final proj/quiz.html
+++ b/cs final proj/quiz.html
@@ -14,7 +14,7 @@
 </header>
 
 <div class="quiz-wrapper">
-    <div id="countdown">Time Left: 60s</div>
+    <div id="countdown">Remaining Time: 60s</div>
     <div id="quiz-content">
         <div class="query" id="query"></div>
         <div id="choices"></div>
