--- a/cs final proj/solution.html
+++ b/cs final proj/solution.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HYDROHAVEN</title>
-    <link rel="stylesheet" href="style3.css" type="text/css">
+  <title>HydroHaven | Solutions</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style3.css">
 </head>
 <body>
 
-    <header>
-        <h1>Clean Water and Sanitation</h1>
-        <nav>
-            <a href="index.html" id="home-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="solution.html" class="nav-link">Solution</a>
-        </nav>
-    </header>
+<header class="sitebar">
+  <div class="brand">
+    <img src="logo.png" alt="HydroHaven" width="50">
+    HydroHaven
+    <div class="icon icon-faucet small"></div>
+  </div>
 
-    <main>
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="solution.html">Solutions</a>
+    <a href="new.html">Quiz</a>
+    <a href="proj_signup_giltendez.html">Sign Up</a>
+    <a href="proj_profile_giltendez.html">Profile</a>
+  </nav>
+</header>
 
-	<audio controls autoplay>
-		<source src="watersound.ogg" type="audio/ogg">
-  		<source src="watersound.mp3" type="audio/mpeg">
-	</audio>
+<main>
+  <h1>Solutions</h1>
 
-        <h2>Solution</h2>
-        <p>
-            Moving on, what can be the possible solutions to this issue? Well, starting in our own homes, we can make a significant change by not wasting water. When brushing our teeth or washing the dishes, let’s avoid letting the water run. We can also recycle rainwater; for example, rainwater can be used for watering plants.
-        </p>
-        <p>
-            Communities can also take bigger steps to promote water conservation. Local governments can hold workshops to teach residents how to save water and why it's important. Additionally, investing in systems that capture and use rainwater can help reduce reliance on regular water supplies. By working together, we can create a culture of conservation that helps both our homes and the environment.
-        </p>
+  <audio controls autoplay muted>
+    <source src="watersound.ogg" type="audio/ogg">
+    <source src="watersound.mp3" type="audio/mpeg">
+  </audio>
 
-	<img src="waterwaves.png" alt="WaterWaves" width="500" height="333">
+  <p>
+    At home, conserve by closing the tap while brushing teeth and reusing rainwater for plants.
+    Communities can host conservation workshops and invest in rain-harvesting systems to cut reliance
+    on municipal supply.
+  </p>
 
-    </main>
+  <img src="waterwaves.png" alt="Illustration of water waves" class="responsive-img">
 
-    <footer>
-        <p>&copy; 2024 HydroHaven</p>
-    </footer>
+  <section class="card">
+    <h2><span class="icon icon-faucet small"></span> Water-Saving Tips</h2>
+    <p>Close the tap while brushing and reuse rainwater for plants…</p>
+  </section>
+</main>
 
+<footer>&copy; 2025 HydroHaven</footer>
 </body>
 </html>
-
