--- a/cs final proj/about.html
+++ b/cs final proj/about.html
@@ -1,41 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HYDROHAVEN</title>
-    <link rel="stylesheet" href="style2.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HydroHaven | About</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
 
-    <header>
-        <h1>All About Clean Water and Sanitation</h1>
-        <nav>
-            <a href="index.html" id="home-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="solution.html" class="nav-link">Solution</a>
-        </nav>
-    </header>
+<header class="sitebar">
+  <div class="brand">
+    <img src="logo.png" alt="HydroHaven Logo" width="50">
+    <span>HydroHaven</span>
+  </div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="solution.html">Solutions</a>
+      <a href="new.html">Quiz</a>
+      <a href="proj_signup_giltendez.html">Sign Up</a>
+      <a href="proj_profile_giltendez.html">Profile</a>
+    </nav>
+</header>
 
-    <main>
-	<audio controls autoplay>
-		<source src="watersound.ogg" type="audio/ogg">
-  		<source src="watersound.mp3" type="audio/mpeg">
-	</audio>
+<main class="about-container">
+  <section class="intro-section">
+    <div class="text">
+      <h1>All About Clean Water and Sanitation</h1>
+      <p>
+        Frequent typhoons and floods in many regions lead to water shortages and poor sanitation,
+        exposing communities to diseases like cholera and diarrhea.
+      </p>
+      <p>
+        Ensuring access to safe water isn't just a basic need—it protects health, dignity,
+        and supports stronger, disaster-resilient communities.
+      </p>
+    </div>
+    <div class="media">
+      <img src="handwash.jpg" alt="Washing hands" class="responsive-img">
+    </div>
+  </section>
 
-        <h2>What is this About?</h2>
-        <p>
-            Having clean water and sanitation is crucial for survival. Nowadays, frequent typhoons and floods often lead to water shortages, affecting many people. This situation poses serious health risks due to the spread of waterborne diseases and poor sanitation. Addressing water scarcity and improving sanitation is essential for the well-being and resilience of affected communities.
-        </p>
-        <p>
-            Investing in sustainable water management and disaster preparedness can mitigate the impact of these natural disasters. This includes building resilient infrastructure and promoting efficient water use.
-        </p>
+  <section class="audio-section">
+    <h2>Listen While You Learn</h2>
+    <audio controls autoplay muted>
+      <source src="watersound.ogg" type="audio/ogg">
+      <source src="watersound.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
 
-<img src="handwash.jpg" alt="HandWash" width="500" height="400">
+  <section class="quiz-invite">
+    <h2>Think You Know Water?</h2>
+    <p>Try our quick quiz to test your water-saving knowledge and become a HydroHero!</p>
+    <a href="new.html" class="button">Take the Quiz</a>
+  </section>
+</main>
 
-    </main>
-
-    <footer>
-        <p>&copy; 2024 HydroHaven</p>
-    </footer>
+<footer>
+  &copy; 2025 HydroHaven
+</footer>
 
 </body>
 </html>
