--- a/cs final proj/index.html
+++ b/cs final proj/index.html
@@ -1,59 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HYDROHAVEN</title>
-    <link rel="stylesheet" href="style1.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>HydroHaven | Home</title>
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
 
-    <header>
-        <div class="HydroHaven">HydroHaven: Source of Purity</div>
-        <div class="sub1"></div>
-        <p>Clean and Safe Water for Everyone.</p>
-        <img src="logo.png" alt="HydroHavenLogo" width="250" height="250">
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="solution.html">Solution</a>
-        </nav>
-    </header>
+  <header class="sitebar">
+    <div class="brand">
+      <img src="logo.png" alt="HydroHaven Logo" width="40" />
+      HydroHaven
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="solution.html">Solutions</a>
+      <a href="new.html">Quiz</a>
+      <a href="proj_signup_giltendez.html">Sign Up</a>
+      <a href="proj_profile_giltendez.html">Profile</a>
+    </nav>
+  </header>
 
-#home {
-  width: 46px;
-  height: 44px;
-  background: url(watersplash.jpg) 0 0;
-}
+  <section class="hero">
+    <h1>Clean Water & Sanitation for All</h1>
+    <p>Road to a cleaner, clearer, and safer tomorrow.</p></li>
+    <p>Join HydroHaven on the journey to sustainable water solutions</p>
+    <button class="cta" onclick="location.href='signup.html'">Join the Mission</button>
+  </section>
 
-#next {
-  width: 43px;
-  height: 44px;
-  background: url(watersplash.jpg) -91px 0;
-}
+  <section class="card">
+    <h2>Our Goal</h2>
+    <p>
+      HydroHaven is committed to spreading awareness about the importance of clean water access and proper sanitation, in alignment with the UN's Sustainable Development Goal 6.
+    </p>
+  </section>
+
+  <section class="card">
+    <iframe class="video" width="100%" height="315"
+      src="https://drive.google.com/file/d/1v2Hg7pql5fPZkqL8OkFOfWH0K-jR5VQP/preview"
+      allow="autoplay"
+      title="HydroHaven Overview Video"></iframe>
+  </section>
 
 
-    <main>
-        <h2>Clean Water and Sanitation</h2>
-        <p>Road to a cleaner, clearer, and safer tomorrow.</p>
-
-	<audio controls autoplay>
-		<source src="horse.ogg" type="audio/ogg">
-  		<source src="watersound.mp3" type="audio/mpeg">
-	</audio>
-
-    </main>
-
-    <article>
-        <section>
-            <h1>Clean Water and Sanitation</h1>
-            <p>This website aims to spread awareness about how we need to have clean and safe water to use for everyday our life.</p>
-        </section>
-    </article>
-    
-    <iframe src="https://drive.google.com/file/d/1v2Hg7pql5fPZkqL8OkFOfWH0K-jR5VQP/preview" class="video" width="420" height="315"></iframe>    
-
-    <footer>
-        <p>&copy; </p>
-    </footer>
+  <footer style="text-align: center; padding: 1rem; color: #777;">
+    &copy; 2025 HydroHaven | EST 2025
+  </footer>
 
 </body>
 </html>
